# agent-shield

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_shield/: __init__.py  __main__.py  cli.py  complexity.py  config.py  contracts.py  db_sandbox.py  freezer.py  fs_sandbox.py  injector.py  inspector.py  memory_limit.py  network_sandbox.py  prompt_guard.py  sandbox.py  secrets_sandbox.py  semantic.py  side_effects.py  signature_lock.py  subprocess_sandbox.py  timeout.py  virtual_fs.py
tests/: dummy_app.py  test_core.py
