[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-shield"
version = "1.0.0"
description = "A runtime and definition-time security guardrail framework for AI agents and developers."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Charles", email = "safik112@seznam.cz"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
agent-shield = "agent_shield.cli:main"
