[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-safeguard"
version = "1.0.2"
description = "A runtime and definition-time security guardrail framework for AI agents and developers."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Charles", email = "safik112@seznam.cz"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
agent-shield = "agent_shield.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_shield"]

